force-app/main/default/objects/Cowork_Custom_Settings__c/Cowork_Custom_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom settings for the Cowork SMS Campaign Project</description>
    <label>Cowork Custom Settings</label>
</CustomObject>