force-app/main/default/objects/Cowork_Custom_Settings__c/fields/Support_Email__c.field-meta.xml
<CustomField>
    <fullName>Support_Email__c</fullName>
    <description>Email address will be sent an email when an error occurs.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Support Email</label>
    <type>Email</type>
</CustomField>