force-app/main/default/objects/Cowork_Custom_Settings__c/fields/Twilio_Account_SID__c.field-meta.xml
<CustomField>
    <fullName>Twilio_Account_SID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Twilio Account SID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>