force-app/main/default/objects/Cowork_Custom_Settings__c/fields/Twilio_API_Url__c.field-meta.xml
<CustomField>
    <fullName>Twilio_API_Url__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Twilio API Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>