force-app/main/default/objects/Cowork_Custom_Settings__c/fields/Twilio_Auth_Token__c.field-meta.xml
<CustomField>
    <fullName>Twilio_Auth_Token__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Twilio Auth Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>